k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-service
spec:
  selector:
    app: ecommerce-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
#      nodePort: 30001
